Working on figuring out what path was taken.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <h1 class="p-3 fw-bolder m-3">Time Constraint Traveling Salesman Problem</h1>
     <div class="d-flex flex-row ms-3 p-3 pt-0 mt-0 gap-3">
-      <button type="button" class="btn btn-lg btn-outline-primary">Solve</button>
+      <button type="button" class="btn btn-lg btn-outline-primary" onclick="getDistanceMatrix()">Solve</button>
       <button type="button" class="btn btn-lg btn-outline-danger">Reset</button>
       <button type="button" class="btn btn-lg btn-outline-info" onclick="console.log(nodes)">Help</button>
     </div>
